<!--
 Copyright (C) 2010 Daniel Nilsson

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/app_name" >

	<PreferenceCategory
		android:key="colors"
		android:title="Barvy jídel" >

		<Preference
			android:key="soup"
			android:summary="Nastavit barvu pro polévku"
			android:title="@string/soup" >
		</Preference>

		<Preference
			android:key="food"
			android:summary="Nastavit barvu hlavního chodu"
			android:title="@string/food" >
		</Preference>

		<Preference
			android:key="superior"
			android:summary="Nastavit barvu jídla"
			android:title="@string/superior" >
		</Preference>

		<Preference
			android:key="live"
			android:summary="Nastavit barvu jídla"
			android:title="@string/live" >
		</Preference>

		<Preference
			android:key="pasta"
			android:summary="Nastavit barvu jídla"
			android:title="@string/pasta" >
		</Preference>

		<Preference
			android:key="cold"
			android:summary="Nastavit barvu jídla"
			android:title="@string/cold" >
		</Preference>

		<Preference
			android:key="vegetarian"
			android:summary="Nastavit barvu jídla"
			android:title="@string/vegetarian" >
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="downloads"
		android:title="Stahování" >

		<Preference
			android:key="triggerHour"
			android:summary="Nastavit hodinu kdy se začne zobrazovat menu pro příští den"
			android:title="@string/triggerHour" >
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="others"
		android:title="Ostatní" >

		<Preference
			android:key="reset"
			android:summary="Nastavit původní hodnoty"
			android:title="@string/reset" >
		</Preference>
	</PreferenceCategory>

</PreferenceScreen>